    o 16.10.2003: Version 2.2
    o 26.09.2003: Version 2.1
    o 27.06.2003: Version 2.0
    o 07.03.2003: Version 1.1
    o 06.12.2002: Version 1.0

 _____________________________________________________________________________

 Changes from 4.8 to 4.8.1
_____________________________________________________________________________

1) Complete list of BEAM 4.8.1 bug fixes and improvements

Bugs
[BEAM-1187] - Libraries of SLF4J are included in lib directory
[BEAM-1186] - The Landsat GeoTIFF reader should handle invalid input gracefully
[BEAM-1182] - Libraries of JAI are included twice
[BEAM-1179] - Slightly wrong listing of files in VirtualDir$Zip in beam-spot-vgt-reader
[BEAM-1174] - DIMAP stores the band grouping only if a product has a description
[BEAM-1172] - Boolean parameter values are overridden by default values
[BEAM-1171] - NetCDF file not readable if variable name contains '.' or '/'

 _____________________________________________________________________________

 Changes from 4.7.1 to 4.8
_____________________________________________________________________________

1) New BEAM Features

o Readers for SPOT VEGETATION products, Landsat TM products in GeoTIFF format, HDF-EOS products,
  and generic NetCDF/CF-products have been added.

o A writer for generic NetCDF/CF-products has been added.

o The possibility to apply "auto-grouping" in the product tree has been added; that is, product
  nodes whose names begin equally are automatically put into a common group.

o A toolbar button has been added to overlay the world map as a layer on geographic lat/lon projected products.

o The ESA GlobCover Land Cover Map is used as default world map layer now; however, it is still possible to choose the
 NASA Blue Marble as world map layer instead. 

2) Complete list of BEAM 4.8 bug fixes and improvements

New Features
BEAM-1112 - GPF Operator API to provide better support for image filters and convolutions    