@@ -8,13 +8,12 @@
     <parent>
         <groupId>org.esa.beam</groupId>
         <artifactId>beam</artifactId>
-        <version>4.8</version>
+        <version>4.8.1-SNAPSHOT</version>
     </parent>
 
     <name>BEAM Core API</name>
     <groupId>org.esa.beam</groupId>
     <artifactId>beam-core</artifactId>
-    <version>4.8.1-SNAPSHOT</version>
 
     <packaging>jar</packaging>
     <dependencies>
