@@ -1,7 +1,7 @@
 <module>
     <manifestVersion>1.0.0</manifestVersion>
     <symbolicName>beam-visat-rcp</symbolicName>
-    <version>4.8</version>
+    <version>4.8.1</version>
     <name>VISAT Rich Client Platform</name>
 
     <description>
@@ -11,6 +11,9 @@
 
     <changelog>
         <![CDATA[
+        <p>Changes in 4.8.1<br/>
+          [BEAM-1184] Reprojection dialog does not remember values ("Output Parameters")<br/>
+          [BEAM-1183] Improve reprojection UI usability<br/>
         <p>Changes in 4.8:<br/>
           [BEAM-1169] On KDE (linux) the Java Desktop-API is not supported.<br/>
           [BEAM-1159] Auto-group bands according to their names<br/>
@@ -172,6 +175,7 @@
     </dependency>
     <dependency>
         <module>beam-ui</module>
+        <version>4.8.1</version>
     </dependency>
     <dependency>
         <module>beam-processing</module>
