@@ -8,7 +8,7 @@
     <parent>
         <groupId>org.esa.beam</groupId>
         <artifactId>beam</artifactId>
-        <version>4.8</version>
+        <version>4.8.1-SNAPSHOT</version>
     </parent>
 
     <name>BEAM VISAT Application</name>
