@@ -1,7 +1,7 @@
 <module>
     <manifestVersion>1.0.0</manifestVersion>
     <symbolicName>beam-visat</symbolicName>
-    <version>4.8</version>
+    <version>4.8.1</version>
     <name>BEAM VISAT Application</name>
 
     <description>
@@ -11,6 +11,9 @@
 
     <changelog>
         <![CDATA[
+        <p>Changes in 4.8.1<br/>
+          [BEAM-1184] Reprojection dialog does not remember values ("Output Parameters")<br/>
+          [BEAM-1183] Improve reprojection UI usability<br/>        
         <p>Changes in 4.8:<br/>
           [BEAM-1159] Auto-group bands according to their names<br/>
           [BEAM-1152] Export View as Image - transformation error<br/>
